# umap-go

./: .gitignore  AGENTS.md  LICENSE  README.md  benchmark_fit_transform_test.go  curves.go  curves_test.go  epochs.go  epochs_test.go  fuzzy.go  fuzzy_test.go  go.mod  layout.go  layout_test.go  options.go  spectral.go  spectral_test.go  test_transform.py  testutil_test.go  transform_py_test.go  transform_test.csv  umap.go  umap_test.go  umap_transform_test.go
testdata/: benchmark_fit_transform.py  benchmark_fit_transform_worker_counts.py  benchmark_worker_counts_readme.py  find_ab_params.json  generate.py  pyproject.toml
testdata/datasets/: 2d.json  binary.json  blobs.json  iris.json  probs.json  small.json  sparse.json
testdata/epochs_per_sample/: iris.json
testdata/full_umap/: blobs_supervised.json  blobs_unsupervised.json  iris_supervised.json  iris_unsupervised.json
testdata/fuzzy_simplicial_set/: iris.json  small.json
testdata/knn_brute/: euclidean.json
testdata/knn_nndescent/: euclidean.json
testdata/pairwise_distances/: braycurtis.json  canberra.json  chebyshev.json  correlation.json  cosine.json  dice.json  euclidean.json  hamming.json  haversine.json  hellinger.json  jaccard.json  kulsinski.json  l1.json  l2.json  linf.json  linfinity.json  linfty.json  ll_dirichlet.json  manhattan.json  matching.json  poincare.json  rogerstanimoto.json  russellrao.json  sokalmichener.json  sokalsneath.json  symmetric_kl.json  taxicab.json  yule.json
testdata/pairwise_gradients/: braycurtis.json  canberra.json  chebyshev.json  correlation.json  cosine.json  (+11 more)
(+59 files in other folders)
